fix: replace low contrast text-muted css variable KER-377

--- a/assets/sass/kerrokantasi/_common.scss
+++ b/assets/sass/kerrokantasi/_common.scss
@@ -184,7 +184,7 @@ a.list-group-item {
   color: $brand-info !important;
 }
 .Select-clear-zone {
-  color: $text-muted !important;
+  color: var(--color-black-60) !important;
 }
 
 .maintenance-notification {
